kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ntp-dashboard
  namespace: ntp-checker
spec:
  selector:
    app: ntp-gps-stack
  ports:
    - name: http
      port: 80
      targetPort: 8080
